--- a/package.json
+++ b/package.json
@@ -5,12 +5,19 @@
   "scripts": {
     "start": "node ./bin/www"
   },
+  "type": "module",
+  "author": "Chase Ehlert",
+  "license": "MIT",
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "express-session": "^1.17.3",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "morgan": "~1.9.1"
+  },
+  "devDependencies": {
+    "eslint": "^8.33.0"
   }
 }
