working on interfacing with mongoDB cloud

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Chase Ehlert",
   "license": "MIT",
   "dependencies": {
+    "@types/node": "^18.11.18",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^16.0.3",
@@ -17,6 +18,7 @@
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "mongodb": "^5.0.0",
+    "mongoose": "^6.9.0",
     "morgan": "~1.9.1",
     "sqlite3": "^5.1.4"
   },
