--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "body-parser": "^1.20.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "discord.js": "^14.7.1",
     "dotenv": "^16.0.3",
-    "express": "~4.16.1",
+    "express": "^4.18.2",
     "express-session": "^1.17.3",
     "http-errors": "~1.6.3",
-    "jade": "~1.11.0",
+    "jade": "^0.29.0",
     "mongodb": "^5.0.0",
     "mongoose": "^6.9.0",
     "morgan": "~1.9.1",
