--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongodb": "^5.0.0",
     "mongoose": "^6.9.0",
     "morgan": "~1.9.1",
+    "nanoid": "^4.0.1",
     "sqlite3": "^5.1.4"
   },
   "devDependencies": {
