--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "jsdoc": "jsdoc -c jsdoc.json"
   },
   "type": "module",
   "author": "Chase Ehlert",
@@ -27,6 +28,9 @@
     "sqlite3": "^5.1.4"
   },
   "devDependencies": {
-    "eslint": "^8.33.0"
+    "eslint": "^8.33.0",
+    "jest": "^29.5.0",
+    "jsdoc": "^4.0.2",
+    "typescript": "^5.0.4"
   }
 }
