--- a/package.json
+++ b/package.json
@@ -10,24 +10,15 @@
   "author": "Chase Ehlert",
   "license": "MIT",
   "dependencies": {
-    "@types/node": "^18.11.18",
     "axios": "^1.3.4",
-    "body-parser": "^1.20.1",
-    "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
     "discord.js": "^14.7.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "express-session": "^1.17.3",
-    "http-errors": "~1.6.3",
-    "jade": "^0.29.0",
     "mongodb": "^5.0.0",
-    "mongoose": "^6.9.0",
-    "morgan": "~1.9.1",
-    "nanoid": "^4.0.1",
-    "sqlite3": "^5.1.4"
+    "mongoose": "^6.9.0"
   },
   "devDependencies": {
+    "@types/node": "^18.11.18",
     "eslint": "^8.33.0",
     "jest": "^29.5.0",
     "jsdoc": "^4.0.2",
