--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
+    "lint": "eslint \"**/*.js\"",
     "start": "node ./bin/www",
     "jsdoc": "jsdoc -c jsdoc.json"
   },
