--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "lint": "eslint \"**/*.js\"",
     "start": "node ./bin/www",
     "jsdoc": "jsdoc -c jsdoc.json"
   },
@@ -20,9 +19,10 @@
     "mongoose": "^6.9.0"
   },
   "devDependencies": {
+    "@types/express": "^4.17.17",
     "@types/node": "^18.11.18",
     "eslint": "^8.33.0",
-    "jest": "^29.5.0",
+    "jest": "^25.0.0",
     "jsdoc": "^4.0.2",
     "typescript": "^5.0.4"
   }
