--- a/package.json
+++ b/package.json
@@ -21,10 +21,11 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
-    "@types/node": "^18.11.18",
+    "@types/node": "^18.16.18",
     "eslint": "^8.33.0",
     "jest": "^25.0.0",
     "jsdoc": "^4.0.2",
-    "typescript": "^5.0.4"
+    "ts-loader": "^9.4.3",
+    "typescript": "^5.1.5"
   }
 }
