--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "lint": "eslint \"**/*.js\"",
+    "lint": "eslint \"./src/**/*.ts\" --fix",
     "start": "node ./bin/www",
     "jsdoc": "jsdoc -c jsdoc.json"
   },
@@ -22,7 +22,12 @@
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/node": "^18.16.18",
-    "eslint": "^8.33.0",
+    "@typescript-eslint/eslint-plugin": "^5.60.1",
+    "eslint": "^8.43.0",
+    "eslint-config-standard-with-typescript": "^19.0.1",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^15.7.0",
+    "eslint-plugin-promise": "^4.3.1",
     "jest": "^25.0.0",
     "jsdoc": "^4.0.2",
     "ts-loader": "^9.4.3",
