--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "lint": "eslint \"./src/**/*.ts\" --fix",
-    "start": "node ./bin/www",
+    "start": "ts-node-esm src/app.ts",
     "jsdoc": "jsdoc -c jsdoc.json"
   },
   "type": "module",
@@ -31,6 +31,6 @@
     "jest": "^25.0.0",
     "jsdoc": "^4.0.2",
     "ts-loader": "^9.4.3",
-    "typescript": "^5.1.5"
+    "typescript": "4.4.4"
   }
 }
