adding npm install to ssh step in github actions

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,4 +45,5 @@ jobs:
           script: |
             cd workspaces/D2-Vendor-Alert/
             git pull
+            npm install
             pm2 restart 0
