--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/mustache-express": "^1.2.2",
     "@types/node": "^18.16.18",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "eslint": "^8.43.0",
@@ -30,6 +31,8 @@
     "eslint-plugin-promise": "^4.3.1",
     "jest": "^25.0.0",
     "jsdoc": "^4.0.2",
+    "mustache": "^4.2.0",
+    "mustache-express": "^1.3.2",
     "ts-loader": "^9.4.3",
     "typescript": "4.4.4"
   }
