--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,6 +13,7 @@
     },
     "rules": {
         "@typescript-eslint/strict-boolean-expressions": "warn",
-        "@typescript-eslint/prefer-nullish-coalescing": "warn"
+        "@typescript-eslint/prefer-nullish-coalescing": "warn",
+        "@typescript-eslint/no-invalid-void-type": 0
     }
 }
