--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,5 +46,5 @@ jobs:
             cd workspaces/D2-Vendor-Alert/
             git pull
             npm install
-            tsc
+            npm run tsc
             pm2 restart 0
