--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "lint": "eslint \"./src/**/*.ts\" --fix",
+    "tsc": "tsc",
     "start": "ts-node-esm src/app.ts",
     "jsdoc": "jsdoc -c jsdoc.json"
   },
@@ -34,6 +35,6 @@
     "mustache": "^4.2.0",
     "mustache-express": "^1.3.2",
     "ts-loader": "^9.4.3",
-    "typescript": "4.4.4"
+    "typescript": "5.1.6"
   }
 }
