setup jest to run and completed one test

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
     "allowJs": true,
     "moduleResolution": "node",
     "strictNullChecks": true,
-    "typeRoots": ["src/@types", "node_modules/@types"],
+    "typeRoots": ["src/@types", "node_modules/@types", "jest"],
     "esModuleInterop": true
   },
   "include": [
