--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
+    "test": "jest",
     "lint": "eslint \"./src/**/*.ts\" --fix",
     "tsc": "tsc",
     "start": "ts-node-esm src/app.ts",
@@ -22,6 +23,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.2",
     "@types/mustache-express": "^1.2.2",
     "@types/node": "^18.16.18",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
@@ -30,10 +32,12 @@
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-n": "^15.7.0",
     "eslint-plugin-promise": "^4.3.1",
-    "jest": "^25.0.0",
+    "jest": "^29.5.0",
     "jsdoc": "^4.0.2",
     "mustache": "^4.2.0",
     "mustache-express": "^1.3.2",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.1",
     "ts-loader": "^9.4.3",
     "typescript": "5.1.6"
   }
