added tsc and test steps to git actions, refactored config to use dependency injection, wrapped up database service tests

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,6 +36,10 @@ jobs:
         run: cat $HOME/files.json
       - name: Lint
         run: npm run lint
+      - name: TSC
+        run: npm run tsc
+      - name: Test
+        run: npm run test
       - name: SSH into Droplet
         uses: appleboy/ssh-action@master
         with:
@@ -45,6 +49,4 @@ jobs:
           script: |
             cd workspaces/D2-Vendor-Alert/
             git pull
-            npm install
-            npm run tsc
             pm2 restart 0
