adding maxWokers to jest test:ci script

--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "test": "jest",
     "lint": "eslint \"./src/**/*.ts\" --fix",
     "tsc": "tsc",
+    "test": "jest",
+    "test:ci": "jest --maxWorkers=2",
     "start": "ts-node-esm src/app.ts",
     "jsdoc": "jsdoc -c jsdoc.json"
   },
