--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,7 +39,7 @@ jobs:
       - name: TSC
         run: npm run tsc
       - name: Test
-        run: npm run test
+        run: npm run test:ci
       - name: SSH into Droplet
         uses: appleboy/ssh-action@master
         with:
