--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "lint": "eslint \"./src/**/*.ts\" --fix",
     "tsc": "tsc",
     "test": "jest --coverage",
-    "start": "ts-node-esm src/app.ts",
+    "start": "node dist/src/app.js",
     "jsdoc": "jsdoc -c jsdoc.json"
   },
   "type": "module",
