--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "express": "^4.18.2",
     "joi": "^17.9.2",
     "mongodb": "^5.0.0",
-    "mongoose": "^6.9.0"
+    "mongoose": "^6.9.0",
+    "mustache-express": "^1.3.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
@@ -35,7 +36,6 @@
     "jest": "^29.5.0",
     "jsdoc": "^4.0.2",
     "mustache": "^4.2.0",
-    "mustache-express": "^1.3.2",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
     "ts-loader": "^9.4.3",
