changing app startup behaviour in droplet

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,4 +62,6 @@ jobs:
           script: |
             cd workspaces/D2-Vendor-Alert/
             git pull
+            npm install
+            npm run tsc
             pm2 restart 0
