--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,7 +12,7 @@
         "sourceType": "module"
     },
     "rules": {
-        "indent": [2, 2],
+        "indent": [2, 2, { "SwitchCase": 1}],
         "@typescript-eslint/strict-boolean-expressions": "warn",
         "@typescript-eslint/prefer-nullish-coalescing": "warn",
         "@typescript-eslint/no-invalid-void-type": 0
