--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "jest": "^29.5.0",
     "jsdoc": "^4.0.2",
     "mustache": "^4.2.0",
+    "pino": "^8.14.1",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
     "ts-loader": "^9.4.3",
