--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,8 @@
         "indent": [2, 2, { "SwitchCase": 1}],
         "@typescript-eslint/strict-boolean-expressions": "warn",
         "@typescript-eslint/prefer-nullish-coalescing": "warn",
-        "@typescript-eslint/no-invalid-void-type": 0
+        "@typescript-eslint/no-invalid-void-type": 0,
+        "no-return-await": "off",
+        "@typescript-eslint/return-await": ["error", "in-try-catch"]
     }
 }
