--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -12,7 +12,7 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  update-deployment:
+  check-pull-request:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
