--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,11 +32,11 @@ jobs:
           envkey_DATABASE_CLUSTER: ${{ secrets.DATABASE_CLUSTER }}
           envkey_DATABASE_NAME: ${{ secrets.DATABASE_NAME }}
           envkey_DATABASE_PASSWORD: ${{ secrets.DATABASE_PASSWORD }}
-          envkey_API_KEY: ${{ secrets.API_KEY }}
-          envkey_TOKEN: ${{ secrets.TOKEN }}
-          envkey_CLIENT_ID: ${{ secrets.CLIENT_ID }}
-          envkey_OAUTH_CLIENT_ID: ${{ secrets.OAUTH_CLIENT_ID }}
-          envkey_OAUTH_SECRET: ${{ secrets.OAUTH_SECRET }}
+          envkey_DESTINY_API_KEY: ${{ secrets.DESTINY_API_KEY }}
+          envkey_DISCORD_TOKEN: ${{ secrets.DISCORD_TOKEN }}
+          envkey_DISCORD_CLIENT_ID: ${{ secrets.DISCORD_CLIENT_ID }}
+          envkey_DESTINY_OAUTH_CLIENT_ID: ${{ secrets.DESTINY_OAUTH_CLIENT_ID }}
+          envkey_DESTINY_OAUTH_SECRET: ${{ secrets.DESTINY_OAUTH_SECRET }}
       - name: Install
         run: npm ci
       - name: Gather files changed
