adding development section to README

--- a/.example.env
+++ b/.example.env
@@ -1,3 +1,4 @@
+MONGO_URI=uri for separate database connection than the following "DATABASE_*" properties
 DATABASE_USER=user name for mongo database
 DATABASE_CLUSTER=cluster id for mongo database
 DATABASE_NAME=name of mongo database
