--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -73,4 +73,5 @@ jobs:
               DISCORD_CLIENT_ID=${{ secrets.DISCORD_CLIENT_ID }} \
               DESTINY_OAUTH_CLIENT_ID=${{ secrets.DESTINY_OAUTH_CLIENT_ID }} \
               DESTINY_OAUTH_SECRET=${{ secrets.DESTINY_OAUTH_SECRET }} \
+              DISCORD_NOTIFIER_ADDRESS=${{ secrets.DISCORD_NOTIFIER_ADDRESS }} \
               pm2 restart 0 --update-env
