--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,22 +1,34 @@
 {
+    "parser": "@typescript-eslint/parser",
+    "plugins": [
+        "@typescript-eslint"
+    ],
     "env": {
         "browser": true,
         "es2021": true
     },
     "extends": "standard-with-typescript",
-    "overrides": [
-    ],
+    "overrides": [],
     "parserOptions": {
         "project": "tsconfig.eslint.json",
         "ecmaVersion": "latest",
         "sourceType": "module"
     },
     "rules": {
-        "indent": [2, 2, { "SwitchCase": 1}],
+        "indent": [
+            2,
+            2,
+            {
+                "SwitchCase": 1
+            }
+        ],
         "@typescript-eslint/strict-boolean-expressions": "warn",
         "@typescript-eslint/prefer-nullish-coalescing": "warn",
         "@typescript-eslint/no-invalid-void-type": 0,
         "no-return-await": "off",
-        "@typescript-eslint/return-await": ["error", "in-try-catch"]
+        "@typescript-eslint/return-await": [
+            "error",
+            "in-try-catch"
+        ]
     }
 }
