consolidating into one repo

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,34 +1,28 @@
 {
-    "parser": "@typescript-eslint/parser",
-    "plugins": [
-        "@typescript-eslint"
-    ],
-    "env": {
-        "browser": true,
-        "es2021": true
-    },
-    "extends": "standard-with-typescript",
-    "overrides": [],
-    "parserOptions": {
-        "project": "tsconfig.eslint.json",
-        "ecmaVersion": "latest",
-        "sourceType": "module"
-    },
-    "rules": {
-        "indent": [
-            2,
-            2,
-            {
-                "SwitchCase": 1
-            }
-        ],
-        "@typescript-eslint/strict-boolean-expressions": "warn",
-        "@typescript-eslint/prefer-nullish-coalescing": "warn",
-        "@typescript-eslint/no-invalid-void-type": 0,
-        "no-return-await": "off",
-        "@typescript-eslint/return-await": [
-            "error",
-            "in-try-catch"
-        ]
-    }
+  "parser": "@typescript-eslint/parser",
+  "plugins": [
+      "@typescript-eslint"
+  ],
+  "env": {
+      "browser": true,
+      "es2021": true
+  },
+  "extends": "standard-with-typescript",
+  "overrides": [],
+  "parserOptions": {
+      "project": "tsconfig.eslint.json",
+      "ecmaVersion": "latest",
+      "sourceType": "module"
+  },
+  "rules": {
+      "indent": [2, 2, { "SwitchCase": 1 }],
+      "@typescript-eslint/strict-boolean-expressions": "warn",
+      "@typescript-eslint/prefer-nullish-coalescing": "warn",
+      "@typescript-eslint/no-invalid-void-type": 0,
+      "no-return-await": "off",
+      "@typescript-eslint/return-await": ["error", "in-try-catch"],
+      "@typescript-eslint/semi": "off",
+      "@typescript-eslint/require-await": "error",
+      "@typescript-eslint/await-thenable": "error"
+  }
 }
