removing .js file extensions on import statements and fixing ignore pattern in package.json

--- a/package.json
+++ b/package.json
@@ -47,18 +47,15 @@
   },
   "jest": {
     "preset": "ts-jest",
-  "testEnvironment": "node",
-  "transform": {
-    "^.+\\.(t|j)sx?$": [
-      "ts-jest",
-      { "useESM": true }
-    ]
-  },
-  "moduleNameMapper": {
-    "^(\\.{1,2}/.*)\\.js$": "$1"
-  },
-  "extensionsToTreatAsEsm": [".ts"],
-  "modulePathIgnorePatterns": [".dist/", ".src/tests/helpers/"],
-  "moduleFileExtensions": ["ts", "js", "json", "node"]
+    "testEnvironment": "node",
+    "transform": {
+      "^.+\\.(t|j)sx?$": ["ts-jest", {"useESM": true}]
+    },
+    "moduleNameMapper": {
+      "^(\\.{1,2}/.*)\\.js$": "$1"
+    },
+    "extensionsToTreatAsEsm": [".ts"],
+    "modulePathIgnorePatterns": [".dist/", ".src/testing-helpers/"],
+    "moduleFileExtensions": ["ts", "js", "json", "node"]
   }
 }
