--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-n": "^15.7.0",
     "eslint-plugin-promise": "^4.3.1",
+    "express-async-handler": "^1.2.0",
     "jest": "^29.5.0",
     "jsdoc": "^4.0.2",
     "mustache": "^4.2.0",
@@ -48,7 +49,14 @@
   "jest": {
     "preset": "ts-jest",
     "testEnvironment": "node",
-    "transform": {"\\.[jt]sx?$": ["ts-jest", { "useESM": true }] },
+    "transform": {
+      "\\.[jt]sx?$": [
+        "ts-jest",
+        {
+          "useESM": true
+        }
+      ]
+    },
     "moduleNameMapper": {
       "^(\\.\\.?\\/.+)\\.js$": "$1"
     },
@@ -64,6 +72,8 @@
       ".src/presentation/discord/deploy-commands-script.ts",
       ".src/presentation/discord/deploy-commands.ts"
     ],
-    "setupFiles": ["./jest.setup.ts"]
+    "setupFiles": [
+      "./jest.setup.ts"
+    ]
   }
 }
