ordering notify server setup before call to listen

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
     "typeRoots": ["src/d2-vendor-alert/@types", "node_modules/@types", "jest"],
     "esModuleInterop": true
   },
+  "files": ["global.d.ts"],
   "include": [
     "src/**/*.ts"
   ],
