--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "eslint-plugin-promise": "^4.3.1",
     "express-async-handler": "^1.2.0",
     "jest": "^29.5.0",
+    "jest-extended": "^4.0.2",
     "jsdoc": "^4.0.2",
     "mustache": "^4.2.0",
     "pino": "^8.14.1",
@@ -48,6 +49,7 @@
   },
   "jest": {
     "preset": "ts-jest",
+    "setupFilesAfterEnv": ["./test-setup.ts"],
     "testEnvironment": "node",
     "transform": {
       "\\.[jt]sx?$": [
