--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "jsdoc": "jsdoc -c jsdoc.json",
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
-    "docs:preview": "vitepress preview docs"
+    "docs:preview": "vitepress preview docs --port 8080"
   },
   "type": "module",
   "author": "Chase Ehlert",
