--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "tests-with-coverage": "jest --coverage --collectCoverageFrom='src/**/*.ts'",
     "start-alert": "npm run tsc && node dist/apps/d2-vendor-alert/app.js",
     "start-notifier": "npm run tsc && node dist/apps/discord-notifier/app.js",
-    "jsdoc": "jsdoc -c jsdoc.json"
+    "jsdoc": "jsdoc -c jsdoc.json",
+    "docs:dev": "vitepress dev docs",
+    "docs:build": "vitepress build docs",
+    "docs:preview": "vitepress preview docs --port 8080"
   },
   "type": "module",
   "author": "Chase Ehlert",
@@ -43,12 +46,20 @@
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
     "ts-loader": "^9.4.3",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "vitepress": "^1.3.1"
   },
   "jest": {
     "preset": "ts-jest",
     "testEnvironment": "node",
-    "transform": {"\\.[jt]sx?$": ["ts-jest", { "useESM": true }] },
+    "transform": {
+      "\\.[jt]sx?$": [
+        "ts-jest",
+        {
+          "useESM": true
+        }
+      ]
+    },
     "moduleNameMapper": {
       "^(\\.\\.?\\/.+)\\.js$": "$1"
     },
@@ -64,6 +75,8 @@
       ".src/presentation/discord/deploy-commands-script.ts",
       ".src/presentation/discord/deploy-commands.ts"
     ],
-    "setupFiles": ["./jest.setup.ts"]
+    "setupFiles": [
+      "./jest.setup.ts"
+    ]
   }
 }
