--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
     "lint": "eslint \"./src/**/*.ts\" --fix",
     "tsc": "tsc",
     "tests": "jest",
-    "tests-with-coverage": "jest --coverage --collectCoverageFrom='src/**/*.ts'",
-    "start-alert": "npm run tsc && node dist/apps/d2-vendor-alert/app.js",
-    "start-notifier": "npm run tsc && node dist/apps/discord-notifier/app.js",
+    "tests:coverage": "jest --coverage --collectCoverageFrom='src/**/*.ts'",
+    "start:alert": "npm run tsc && node dist/apps/d2-vendor-alert/app.js",
+    "start:notifier": "npm run tsc && node dist/apps/discord-notifier/app.js",
     "jsdoc": "jsdoc -c jsdoc.json"
   },
   "type": "module",
